# modbus_connect

./: .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements_test.txt  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  device_request.yml
.github/workflows/: release.yml  test.yml  validate.yml
config/: configuration.yaml
converter/: convert.py  homeassistant_solax_modbus-convert.py  modbus_local_gateway-convert.py
custom_components/modbus_connect/: __init__.py  binary_sensor.py  button.py  client.py  climate.py  codec.py  config_flow.py  const.py  conversion.py  coordinator.py  cover.py  diagnostics.py  entity.py  fan.py  helpers.py  icons.json  light.py  loader.py  manifest.json  models.py  number.py  planner.py  schema.py  (+9 more)
docs/: device_files.md  device_files.schema.json
support/: build_brand.py  build_json_schema.py  controller_extensions.md  modbus_cli.py  sonar-project.properties
tests/: __init__.py  conftest.py  fakes.py  test_augment.py  test_binary_sensor.py  test_client.py  test_codec.py  test_config_flow.py  test_conversion.py  test_converter.py  test_coordinator.py  test_devicedocs.py  test_dimplex_pichler_augment.py  test_e2e_server.py  test_init.py  test_json_schema.py  test_loader.py  test_modbus_device_info.py  test_modbus_scanner.py  test_number.py  test_owned_device_files.py  test_planner.py  test_schema.py  test_select.py  test_sensor.py  test_switch.py  test_template.py  test_text.py
(+166 files in other folders)
