[project]
name = "modbus-connect"
version = "0.1.0"
description = "Home Assistant integration for Modbus devices behind local TCP gateways, with block-optimized register reads"
requires-python = ">=3.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["E501"]
